--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
     <a href="" class="">
       <img class="saltologo" src="assets/imgs/saltologo.png" alt="">
     </a>
-<a href="" class="navbar-brand align-text-top">SALTO INSTALACIONES</a>
-<small>SERVICIO TECNICO ESPECIALIZADO</small>
+<a href="#" class="navbar-brand align-text-top">SALTO INSTALACIONES</a>
+<small>Servicio técnico especializado</small>
 <a href="https://www.instagram.com/saltoinstalaciones/" class="icon-link">
   <i class="fa fa-brands fa-instagram" style="color: #a64e9b;"></i>
 </a>
@@ -35,7 +35,9 @@
 
   <div class="text-center">
     <app-navegat></app-navegat>
-
+    <div id="beforefooter">
+      <img src="assets/imgs/expimg.png" alt="">
+    </div>
 
     <app-sitefooter></app-sitefooter>
 
