--- a/src/app/climate/climate.component.html
+++ b/src/app/climate/climate.component.html
@@ -7,7 +7,7 @@
 
     <div class="col-md-4">
       <div class="card-body">
-        <h5 class="card-title">Climatizacion de piscinas</h5>
+        <h5 class="card-title">Climatización de piscinas</h5>
         <p class="card-text">Para aquellos que desean maximizar el disfrute de su piscina durante todo el año.</p>
 
         <div class="accordion accordion-flush" id="accordionHouse">
@@ -51,7 +51,7 @@
               </div>
           </div>
         </div>
-        <button type="button" id="ctanow" class="btn btn-outline-primary">Solicitar presupuesto</button>
+        <button type="button" id="ctanow" class="btn btn-outline-primary">Comunicate hoy mismo mediante whatsapp</button>
       </div>
       </div>
 
