--- a/src/app/heromain/heromain.component.html
+++ b/src/app/heromain/heromain.component.html
@@ -13,7 +13,7 @@
           <div class="card-body">
             <h5 class="card-title">Paneles solares</h5>
 
-            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer más</button>
           </div>
         </div>
 
@@ -35,7 +35,7 @@
           <div class="card-body">
             <h5 class="card-title">Videovigilancia</h5>
 
-            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer más</button>
           </div>
         </div>
 
@@ -55,9 +55,11 @@
 
         <div class="col-md-4">
           <div class="card-body">
-            <h5 class="card-title">Climatizacion de piscinas</h5>
+            <h5 class="card-title">Climatización de piscinas</h5>
 
-            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+            <a href="#">
+              <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer más</button>
+            </a>
           </div>
         </div>
 
@@ -69,11 +71,11 @@
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
+    <span class="visually-hidden">Anterior</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
+    <span class="visually-hidden">Siguiente</span>
   </button>
 </div>
 
