--- a/src/app/houseing/houseing.component.html
+++ b/src/app/houseing/houseing.component.html
@@ -14,10 +14,10 @@
 
         <div class="col-md-4">
           <div class="card-body">
-            <h5 class="card-title">Instalaciones domiciliarias y mantenimiento electrico</h5>
+            <h5 class="card-title">Instalaciones domiciliarias y mantenimiento eléctrico</h5>
             <p class="card-text">El mantenimiento regular de las instalaciones eléctricas es esencial para garantizar la seguridad, la eficiencia y la confiabilidad a largo plazo del sistema eléctrico, además de cumplir con las normativas y evitar costosos problemas y reparaciones.</p>
 
-            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer más</button>
 
           </div>
         </div>
@@ -34,11 +34,11 @@
 
         <div class="col-md-4">
           <div class="card-body" id="second-card">
-            <h5 class="card-title">Instalaciones electricas y asesoria en obras</h5>
+            <h5 class="card-title">Instalaciones eléctricas y asesoría en obras</h5>
             <p class="card-text">Contratar a un buen electricista es crucial para garantizar el éxito
               y la seguridad de una obra, ya sea una vivienda o un edificio.</p>
 
-            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer mas</button>
+            <button type="button" id="ctanow" class="btn btn-outline-primary">Conocer más</button>
           </div>
         </div>
       </div>
@@ -47,11 +47,11 @@
 
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
+    <span class="visually-hidden">Anterior</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
+    <span class="visually-hidden">Siguiente</span>
   </button>
 
 </div>
