--- a/src/app/industry/industry.component.html
+++ b/src/app/industry/industry.component.html
@@ -51,7 +51,7 @@
             </div>
         </div>
       </div>
-      <button type="button" id="ctanow" class="btn btn-outline-primary">Solicitar presupuesto</button>
+      <button type="button" id="ctanow" class="btn btn-outline-primary">Coordiná hoy mismo una visita</button>
     </div>
     </div>
 
