--- a/src/app/installations/installations.component.html
+++ b/src/app/installations/installations.component.html
@@ -53,7 +53,7 @@
               </div>
           </div>
         </div>
-        <button type="button" id="ctanow" class="btn btn-outline-primary">Solicitar presupuesto</button>
+        <button type="button" id="ctanow" class="btn btn-outline-primary">Cotiza hoy tu instalación</button>
       </div>
       </div>
 
