--- a/src/app/navegat/navegat.component.html
+++ b/src/app/navegat/navegat.component.html
@@ -20,7 +20,7 @@
     <a class="nav-link" [class.active]="isActive[2]" (click)="setActive(2)" routerLink="works">Clientes satisfechos</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link"  [class.active]="isActive[3]" (click)="setActive(3)" routerLink="contactnow">Contactenos</a>
+    <a class="nav-link"  [class.active]="isActive[3]" (click)="setActive(3)" routerLink="contactnow">Contáctenos</a>
   </li>
 
 
