--- a/src/app/panels/panels.component.html
+++ b/src/app/panels/panels.component.html
@@ -8,7 +8,7 @@
       <div class="card-body">
         <h5 class="card-title">Instalacion de paneles solares</h5>
         <p class="card-text">Por que no aprovechar la energia del sol para reducir tus costos energeticos?</p>
-        <h5 class="card-text">Hace la eleccion inteligente, elegi la energia solar!</h5>
+        <h5 class="card-text">Hace la eleccion inteligente, elegi la energía solar!</h5>
         <div class="accordion accordion-flush" id="accordionHouse">
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -50,7 +50,7 @@
               </div>
           </div>
         </div>
-        <button type="button" id="ctanow" class="btn btn-outline-primary">Solicitar presupuesto</button>
+        <button type="button" id="ctanow" class="btn btn-outline-primary">Coordiná hoy una visita</button>
       </div>
       </div>
 
