--- a/src/app/climate/climate.component.css
+++ b/src/app/climate/climate.component.css
@@ -1,3 +1,4 @@
+
 .col-md-6 img {
   max-height: 600px;
 }
@@ -11,4 +12,7 @@
 }
 #ctanow {
   margin: 1rem 1.3rem;
+}
+.accordion {
+  text-align: left;
 }
