--- a/src/app/services-sect/services-sect.component.html
+++ b/src/app/services-sect/services-sect.component.html
@@ -2,7 +2,7 @@
   <div class="card" style="width: 18rem;">
     <img src="assets/imgs/2.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <p class="card-text">Instalación de paneles solares. Nuestro equipo de expertos altamente capacitados se encargara de todo el proceso, desde la evaluacion de tu espacio hasta la instalacion completa, garantizando un rendimiento optimo y duradero </p>
+      <p class="card-text">Nuestro equipo altamente capacitado se encargara de todo el proceso, desde la evaluación de tu espacio hasta la instalación completa, garantizando un rendimiento optimo y duradero </p>
     </div>
 
   </div>
@@ -16,9 +16,9 @@
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="assets/imgs/housemaint.png" class="card-img-top" alt="...">
+    <img src="assets/imgs/oldswitch.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <p class="card-text"> Desde instalaciones hasta reparaciones, nos aseguramos de que cada trabajo se realice con la mas alta calidad y profesionalismo.</p>
+      <p class="card-text"> Desde instalaciones hasta reparaciones, nos aseguramos de que cada trabajo se realice con la más alta calidad y profesionalismo.</p>
     </div>
 
   </div>
