--- a/src/app/sitefooter/sitefooter.component.css
+++ b/src/app/sitefooter/sitefooter.component.css
@@ -21,7 +21,9 @@ small {
 .link-dark i {
   font-size: 1.5rem;
 }
-
-a.link-dark {
-  margin-bottom: 1.3rem;
+#contenedor-foot {
+  padding: 1.5rem;
+}
+#contenedor-foot small, ul li, #anchor-location {
+  margin-bottom: 1.1rem;
 }
