--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,9 @@
   font-family: 'Inter', sans-serif;
 
 }
-
+#webtitle {
+  font-weight: bolder;
+}
 nav {
   background: #e2e8fa;
   background: -webkit-linear-gradient(to right, #E2E2E2, #e2e8fa);  /* Chrome 10-25, Safari 5.1-6 */
@@ -10,13 +12,63 @@ nav {
 
 }
 .saltologo {
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
   margin: 0;
   padding: 0;
   mix-blend-mode: multiply;
+  position: relative;
+  animation: shift 5s ease-in-out infinite alternate;
+  transform: skewX(0deg);
+  z-index: 1;
 
 }
+
+.saltologo-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+
+
+@keyframes shift {
+  0%, 40%, 44%, 58%, 61%, 65%, 69%, 73%, 100% {
+     transform: skewX(0deg);
+  }
+
+  41% {
+     transform: skewX(10deg);
+  }
+
+  42% {
+     transform: skewX(-10deg);
+  }
+
+  59% {
+     transform: skewX(40deg) skewY(10deg);
+  }
+
+  60% {
+     transform: skewX(-40deg) skewY(-10deg);
+  }
+
+  63% {
+     transform: skewX(10deg) skewY(-5deg);
+  }
+
+  70% {
+     transform: skewX(-50deg) skewY(-20deg);
+  }
+
+  71% {
+     transform: skewX(10deg) skewY(-10deg);
+  }
+}
+
 .navbar-brand {
   font-size: 1.8rem;
 }
@@ -101,7 +153,7 @@ nav {
 @media only screen and (width < 1400px) {
   #cont-whatsapp {
     display: flex;
-    left: 70%;
+    left: 65%;
   }
 }
 @media only screen and (width < 768px) {
@@ -110,6 +162,36 @@ nav {
   }
 }
 
-#beforefooter img {
+.ismobile img{
+width: 100%;
+}
+.notmobile {
+  width: 1200px;
+}
+.notmobile .imgtwo {
+  width: 150%;
+  height: 90%;
+  margin: 0;
+}
+.container-fluid {
+  border: 1px solid #e2e8fa;
+  max-height: max-content;
+}
+.text-container {
   width: 90%;
+  max-width: 1200px;
+  position: absolute;
+  margin-top: 60%;
+  background: rgba(187, 185, 185, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border-radius: 4px;
+  border: 1px solid rgba(187, 185, 185, 0.25);
+}
+.text-container h2 {
+  padding: .5rem .3rem;
+}
+.text-container h4 {
+  padding-top: 1.5rem;
+
 }
