--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
  <div class="container-fluid">
   <nav class="navbar bg-body-tertiary">
   <div class="container">
-    <a href="" class="">
+    <a href="" class="saltologo-wrapper">
       <img class="saltologo" src="assets/imgs/saltologo.png" alt="">
     </a>
-<a href="#" class="navbar-brand align-text-top">SALTO INSTALACIONES</a>
+<a href="#" id="webtitle" class="navbar-brand align-text-top">SALTO INSTALACIONES</a>
 <small>Servicio técnico especializado</small>
 <a href="https://www.instagram.com/saltoinstalaciones/" class="icon-link">
   <i class="fa fa-brands fa-instagram" style="color: #a64e9b;"></i>
@@ -35,11 +35,33 @@
 
   <div class="text-center">
     <app-navegat></app-navegat>
-    <div id="beforefooter">
-      <img src="assets/imgs/expimg.png" alt="">
+
+
     </div>
 
-    <app-sitefooter></app-sitefooter>
+<div class="container-fluid">
+  <div class="ismobile" *ngIf="isMobile">
 
-  </div>
+    <img src="assets/imgs/expimg.png" alt="">
+
 </div>
+<div class="notmobile" *ngIf="!isMobile">
+  <section class="text-container">
+    <h2>Más de 20 años de trayectoria brindando soluciones eléctricas integrales de manera eficiente</h2>
+    <h4>Nuestra experiencia nos avala</h4>
+    <h4>Transparencia de costos</h4>
+    <h4>Seguridad y tranquilidad para vos, tu hogar y tu negocio</h4>
+  </section>
+    <img src="assets/imgs/expimgtwo.png" class="imgtwo" alt="" srcset="">
+
+</div>
+
+</div>
+
+
+    <app-sitefooter></app-sitefooter>
+  </div>
+
+
+
+
