--- a/src/app/heromain/heromain.component.css
+++ b/src/app/heromain/heromain.component.css
@@ -44,3 +44,7 @@ span.visually-hidden {
   background-color: #40548f;
   color: #85a2f8;
 }
+.col-md-6 img {
+  clip-path: polygon(15% 0%, 85% 0%, 100% 15%, 100% 85%, 85% 100%, 15% 100%, 0% 85%, 0% 15%);
+
+}
