--- a/src/app/services-sect/services-sect.component.css
+++ b/src/app/services-sect/services-sect.component.css
@@ -8,6 +8,7 @@ a {
 }
 .card {
   padding: 0 1.1rem;
+  margin: 0 auto;
   border: none;
   font-family: 'Bebas Neue', sans-serif;
 }
@@ -17,6 +18,7 @@ a {
 .card-text {
   text-align: center;
   padding: .4rem;
+  font-family: 'Inter', sans-serif;
 }
 .card-footer {
   border-bottom: 1px solid #000;
